[tool.poetry]
name = "data-science"
version = "0.1.0"
description = ""
authors = ["bpht <bennyphtam@gmail.com>"]
readme = "README.md"
packages = [{include = "data_science"}]

[tool.poetry.dependencies]
python = "~3.10"
pandas = "~1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"